# MVP_onboarding-agents

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  App.tsx  CLAUDE.md  Dockerfile  FIXES_SUMMARY.md  Finish-real-mvp-project.md  GO_LIVE_CHECKLIST.md  PLAN_BAZI_INTEGRATION.md  PLAN_VOICE_INTEGRATION.md  PR1_AUTOMATED_TESTING_TASK.md  PR2_AUTOMATED_TESTING_TASK.md  README.md  SSoTh_Repaired.md  apply_migrations.cjs  apply_migrations.js  bug170126.md  fly.toml  improvements170126.md  index.html  index.tsx  kanban.md  metadata.json  package-lock.json  package.json  railway.toml  state170126.md  styles.css  tsconfig.json  tsconfig.server.json  types.ts  vercel.json  vite.config.ts  vitest.config.ts
.claude-flow/: config.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.swarm/: state.json
BaZiEngine_v2/: CLAUDE.md
BaZiEngine_v2/bazi_engine_v0_2/: .dockerignore  Dockerfile  QWEN.md  README.md  pyproject.toml
BaZiEngine_v2/bazi_engine_v0_2/.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
BaZiEngine_v2/bazi_engine_v0_2/.github/workflows/: ci.yml
BaZiEngine_v2/bazi_engine_v0_2/.swarm/: memory.db
BaZiEngine_v2/bazi_engine_v0_2/bazi_engine/: __init__.py  app.py  bazi.py  cli.py  constants.py  ephemeris.py  interpretation.py  jieqi.py  time_utils.py  types.py  western.py
BaZiEngine_v2/bazi_engine_v0_2/docs/: architecture_overview.md  components.md  user_journey.md
BaZiEngine_v2/bazi_engine_v0_2/tests/: test_golden.py  test_golden_vectors.py  test_invariants.py
assets/: index-DjCm6Pst.js
components/: AgentSelectionView.tsx  (+8 more)
(+79 files in other folders)
